# emotalk

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
apps/backend/: .dockerignore  Dockerfile  Makefile  README.md  package.json  pyproject.toml
apps/backend/src/: app.js
apps/backend/src/config/: emotions.js
apps/backend/src/controllers/: analyzeAudioController.js  chatController.js
apps/backend/src/emotalk_backend/: __init__.py  config.py  main.py
apps/backend/src/emotalk_backend/api/: router.py
apps/backend/src/emotalk_backend/api/routes/: health.py
apps/backend/src/routes/: agoraRoute.js
apps/backend/src/services/: agoraCustomLlmService.js  chatService.js  conversationalAgentService.js  ttsService.js
apps/backend/tests/: test_health.py
apps/frontend/: README.md  index.html  package.json
apps/frontend/src/: App.tsx  styles.css  vite-env.d.ts
apps/frontend/src/components/: CallSummaryScreen.tsx
apps/frontend/src/lib/: api.ts  types.ts
